tests/functional/lang/eval-fail-genList-4.err.exp
error:
       … while calling the 'genList' builtin
         at /pwd/lang/eval-fail-genList-4.nix:1:1:
            1| builtins.genList false (-3)
             | ^
            2|

       error: cannot create list of size -3
